Bug 456340 - "First Frame" and "Last Frame" keyboard shortcuts do nothing
Summary: "First Frame" and "Last Frame" keyboard shortcuts do nothing
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.1.0-beta1
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-07-05 03:14 UTC by JLemay
Modified: 2022-07-08 00:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description JLemay 2022-07-05 03:14:10 UTC
SUMMARY

No matter what keys are set for the "First Frame" and "Last Frame" shortcuts, nothing happens when the keys are pressed.


STEPS TO REPRODUCE
1. Set any key to the "First Frame" and "Last Frame" actions in the Keyboard Shortcuts category of Krita's settings.
2. Confirm.
3. Create an animation with multiple frames.
4. Try to use the shortcuts.


OBSERVED RESULT

Nothing.


EXPECTED RESULT

The cursor should move to the beginning or end of the playback area.


SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 5.12.12

ADDITIONAL INFORMATION

I've also tested this in Krita versions 5.0.2, 5.0.6 and the 2022-07-04 nightly build (krita-nightly-x64-5.2.0-prealpha-76a9e434dd), with the same result across all of these versions.

Thank you.
Comment 1 JLemay 2022-07-07 20:55:54 UTC
The problem also exists in a new, clean installation of Manjaro Linux (kernel version: 5.15.50-1-MANJARO (64-bit)).
Comment 2 Eoin O'Neill 2022-07-07 23:49:27 UTC
Git commit d91e300311aa8478f60fa3cb325fdd77756eb07d by Eoin O'Neill.
Committed on 07/07/2022 at 23:49.
Pushed by eoinoneill into branch 'master'.

Fix hotkeys not working properly for "last_frame" and "first_frame"
actions.

Should now work with custom keybinds accessing such features.

M  +12   -0    libs/ui/canvas/kis_animation_player.cpp
M  +1    -0    libs/ui/canvas/kis_animation_player.h
M  +16   -0    plugins/dockers/animation/KisAnimTimelineDocker.cpp

https://invent.kde.org/graphics/krita/commit/d91e300311aa8478f60fa3cb325fdd77756eb07d
Comment 3 Eoin O'Neill 2022-07-07 23:50:40 UTC
Thanks for reporting the bug jlemay.emploi

Yeah, looks like I missed two user bindable actions in the binding code. I've gone ahead and patched it. You can try the latest nightly soon or when 5.1 eventually comes out. 

Thanks again,
Eoin.
Comment 4 Eoin O'Neill 2022-07-07 23:52:18 UTC
Git commit 8494d4f949816dc3f5400ba7e0b742ad935afd6e by Eoin O'Neill.
Committed on 07/07/2022 at 23:52.
Pushed by eoinoneill into branch 'cherry-pick-d91e3003'.

Fix hotkeys not working properly for "last_frame" and "first_frame"
actions.

Should now work with custom keybinds accessing such features.


(cherry picked from commit d91e300311aa8478f60fa3cb325fdd77756eb07d)

M  +12   -0    libs/ui/canvas/kis_animation_player.cpp
M  +1    -0    libs/ui/canvas/kis_animation_player.h
M  +16   -0    plugins/dockers/animation/KisAnimTimelineDocker.cpp

https://invent.kde.org/graphics/krita/commit/8494d4f949816dc3f5400ba7e0b742ad935afd6e
Comment 5 JLemay 2022-07-08 00:34:44 UTC
Much obliged, I look forward to testing it out.