Fix hotkeys not working properly for "last_frame" and "first_frame" actions.

Should now work with custom keybinds accessing such features.

BUG:456340